src/main/java/com/example/final_project/domain/error/BudgetErrorCode.java
package com.example.final_project.domain.error;

public enum BudgetErrorCode {
    BUDGET_NOT_FOUND,
    TO_BIG_LIMIT,
    BUDGET_AMOUNT_EXCEEDED


}
